2011-08-25  Vadim Kurland  <vadim@netcitadel.com>

	* PolicyCompiler_ipt.cpp (processNext): fixes #2650 "rules with
	address range that includes firewall address in Src are placed in
	OUTPUT chain even though addresses that do not match the firewall
	should go in FORWARD"

2011-08-14  Vadim Kurland  <vadim@netcitadel.com>

	* InetAddr.cpp (InetAddr::isValidV4Netmask): function
	InetAddr::isValidV4Netmask() checks that netmask represented by
	the object consists of a sequence of "1" bits, followed by the
	sequence of "0" bits and therefore does not have zeroes in the
	middle.

	* NetworkDialog.cpp (NetworkDialog::validate): added check to make
	sure user does not enter netmask with zeroes in the middle for the
	IPv4 network object. Netmasks like that are not supported by
	fwbuilder.

	* RuleSetView.cpp (RuleSetView::addColumnRelatedMenu): fixes #2643
	"GUI crashes when user cuts a rule, then right-mouse click in any
	rule element of another"

2011-08-11  Vadim Kurland  <vadim@netcitadel.com>

	* freebsd/carp_interface: see #2638 "When CARP password is empty
	the advskew value is not read". Should skip "pass <word>"
	parameter of the ifconfig command that creates carp interface
	if user did not set up any password.

	* OSConfigurator_linux24_interfaces.cpp (validateInterfaces):
	see #2639 "support for vlan subinterfaces of bridge interfaces
	(e.g.  br0.5)". Currently fwbuilder can not generate script to
	configure vlan subinterfaces of bridge interfaces, however if user
	did not request this configuration script to be generated,
	compiler should not abort when it encounters this combination.

	* InterfaceEditorWidget.cpp (validateAddress): fixes #2641
	"newFirewall dialog does not accept ipv6 addresses with long
	prefixes". The dialog did not allow ipv6 addresses of inetrfaces
	with netmask > 64 bit.

	* newFirewallDialog.cpp (cleanup): fixes #2642 "GUI crashes if
	user cancels newFirewall dialog".

	* RuleOptionsDialog.cpp (fillInterfaces): the drop-down list of